# autonomousCar

./: .gitignore  README.md
alfred_bringup/: CMakeLists.txt  package.xml
alfred_bringup/config/: ros_gz_bridge.yaml
alfred_bringup/launch/: alfred_launch.yaml
alfred_control/: CMakeLists.txt  package.xml
alfred_guidance/: CMakeLists.txt  package.xml
alfred_interfaces/: CMakeLists.txt  package.xml
alfred_interfaces/msg/: AprilTagDetection.msg
alfred_navigation/: CMakeLists.txt  package.xml
alfred_navigation/include/alfred_navigation/: StaticTransform_struct.h  staticTransform_class.h  worldMap_class.h  worldTransforms_class.h
alfred_navigation/launch/: alfred_navigation_launch.yaml
alfred_navigation/src/: dynamicTransforms_class.cpp  dynamicTransforms_class.h  mainNavigation.cpp  staticTransform_class.cpp  staticTransform_class.h  worldMap_class.cpp  worldMap_class.h  worldTransforms_class.cpp  worldTransforms_class.h
alfred_navigation/src/cfg/: navigation_cfg.yaml
alfred_navigation/src/nav_utils/nav_structs/: StaticTransform_struct.cpp  StaticTransform_struct.h
alfred_perception/: CMakeLists.txt  package.xml
alfred_perception/cfg/: detector_cfg.yaml
alfred_perception/include/alfred_perception/: AprilTagDetector_class.h  TagDetection_struct.h  TagPerception_class.h  tag_helper.h
alfred_perception/src/: AprilTagDetector_class.cpp  AprilTagDetector_class.h  TagPerception_class.cpp  TagPerception_class.h  mainPerception.cpp
alfred_perception/src/cfg/: detector_cfg.yaml
alfred_perception/src/tag_utils/tag_functions/: tag_helper.cpp  tag_helper.h
alfred_perception/src/tag_utils/tag_structs/: TagDetection_struct.cpp  TagDetection_struct.h
alfred_perception/src/talker/: helloworld
alfred_sim/: CMakeLists.txt  package.xml
alfred_sim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
alfred_sim/install/alfred_sim/share/alfred_sim/: local_setup.sh  package.sh  package.xml
alfred_sim/install/alfred_sim/share/ament_index/resource_index/parent_prefix_path/: alfred_sim
alfred_sim/launch/: gazebo_sim_launch.xml
alfred_sim/log/: latest_build
alfred_sim/models/car/: ackermann_steering.sdf
alfred_sim/models/car/materials/scripts/: aprilTag0.material
alfred_sim/models/tugbot-charging-station/2/: model.sdf
alfred_sim/models/tugbot/1/: model.sdf
alfred_sim/worlds/: empty_world.world  world.sdf
